syntax = "proto3";
package synapse_pb;

import "synapse_pb/actuators.proto";
import "synapse_pb/altimeter.proto";
import "synapse_pb/battery_state.proto";
import "synapse_pb/bezier_trajectory.proto";
import "synapse_pb/clock_offset.proto";
import "synapse_pb/imu.proto";
import "synapse_pb/imu_q31_array.proto";
import "synapse_pb/input.proto";
import "synapse_pb/led_array.proto";
import "synapse_pb/magnetic_field.proto";
import "synapse_pb/nav_sat_fix.proto";
import "synapse_pb/odometry.proto";
import "synapse_pb/pose.proto";
import "synapse_pb/pwm.proto";
import "synapse_pb/quaternion.proto";
import "synapse_pb/safety.proto";
import "synapse_pb/sim_clock.proto";
import "synapse_pb/status.proto";
import "synapse_pb/twist.proto";
import "synapse_pb/uptime.proto";
import "synapse_pb/wheel_odometry.proto";

message Frame
{
	oneof msg
	{
		// these are functioning as typed topics
		// the name of the field is the topic name
		// renumbering should be minimized for
		// backward compatability
		Actuators actuators = 1;
		Altimeter alitimeter = 2;
		BatteryState battery_state = 3;
		BezierTrajectory bezier_trajectory = 4;
		ClockOffset clock_offset = 5;
		Imu imu = 6;
		Input input = 7;
		LEDArray led_array = 8;
		MagneticField magnetic_field = 9;
		NavSatFix nav_sat_fix = 10;
		Odometry odometry = 11;
		Pose pose = 12;
		Pwm pwm = 13;
		Quaternion quaternion = 14;
		Safety safety = 15;
		SimClock sim_clock = 16;
		Status status = 17;
		Twist cmd_vel = 18;
		Uptime uptime = 19;
		WheelOdometry wheel_odometry = 20;
		ImuQ31Array imu_0 = 21;
		ImuQ31Array imu_1 = 22;
		ImuQ31Array imu_2 = 23;
	}
}
