syntax = "proto3";
package synapse_pb;

message NavSatStatus
{
  int32 status          = 1;
  uint32 service        = 2;
}
