syntax = "proto3";
package synapse_pb;

import "synapse_pb/pose.proto";

message PoseWithCovariance {
	Pose pose = 1;
	repeated double covariance = 2;
}
