syntax = "proto3";
package synapse_pb;

import "synapse_pb/twist.proto";

message TwistWithCovariance {
	Twist twist = 1;
	repeated double covariance = 2;
}
