syntax = "proto3";
package synapse_pb;

import "synapse_pb/header.proto";

message Vector3 {
	Header header = 1;
	double x = 2; 
	double y = 3; 
	double z = 4; 
}
